--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ body {
   align-items: center;
   justify-content: center;
   min-height: 100vh;
-  background: url("./assets/bg.png") #030728 no-repeat center;
+  background: #030728 no-repeat center;
 }
 
 #root {
